adding notes for comprehension

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <ul id="people">
         <li>
             <img>
-            <div>name</div> when the name is clicked, the address span should show up -->
-            <div hidden>address</div>
+            <div id="nameDiv">name</div> when the name is clicked, the address span should show up -->
+            <div id="addressDiv" hidden>address</div>
         </li>
     </ul>
 </body>
