reformatted the code and added hella notes

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <ul id="people">
         <li>
             <img>
-            <div id="nameDiv">name</div> when the name is clicked, the address span should show up -->
+    <!-- when the name is clicked, the address span should show up, and hide when
+    clicked again-->
+            <div id="nameDiv">name</div> 
             <div id="addressDiv" hidden>address</div>
         </li>
     </ul>
 </body>
-<script src="main.js"></script>
+<script src="/main.js"></script>
 </html>
